--- a/ssm/pom.xml
+++ b/ssm/pom.xml
@@ -154,6 +154,12 @@
       <version>RELEASE</version>
       <scope>compile</scope>
     </dependency>
+
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>29.0-jre</version>
+    </dependency>
   </dependencies>
 
   <build>
